Bug 703821 - Don't squash together draw events if the Java compositor is in use. r=dougt